@@ -346,6 +346,7 @@ public class DeleteReplicaTest extends SolrCloudTestCase {
             log.info("Running delete core {}", cd);
 
             try {
+              waitForJettyInit(replica1Jetty, replica1JettyNodeName);
               ZkController replica1ZkController =
                   replica1Jetty.getCoreContainer().getZkController();
               ZkNodeProps m =
@@ -492,6 +493,20 @@ public class DeleteReplicaTest extends SolrCloudTestCase {
     while (reader.getClusterState().getLiveNodes().contains(lostNodeName)) {
       Thread.sleep(100);
       if (timeOut.hasTimedOut()) fail("Wait for " + lostNodeName + " to leave failed!");
+    }
+  }
+
+  /**
+   * see SOLR-16848 working around a timing issue where the callback will be faster than the
+   * dispatchFilter's init
+   */
+  private void waitForJettyInit(JettySolrRunner replica1Jetty, String replica1JettyNodeName)
+      throws InterruptedException {
+    TimeOut timeOut = new TimeOut(5, TimeUnit.SECONDS, TimeSource.NANO_TIME);
+    while (!replica1Jetty.isRunning()) {
+      Thread.sleep(100);
+      if (timeOut.hasTimedOut())
+        fail("Wait for " + replica1JettyNodeName + " replica to init failed!");
     }
   }
 
